--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         }
     ],
     "require": {
-	    "illuminate/support": "5.1.x",
-	    "spatie/laravel-activitylog": "~1.14"
+	    "illuminate/support": "5.1.x"
 	},
     "minimum-stability": "dev"
 }
