--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "october-plugin",
     "description": "Log model activity in your OctoberCMS projects",
     "homepage": "https://github.com/LukeTowers/oc-activitylog-plugin",
-    "keywords": ["october", "octobercms", "laravel", "spatie/laravel-activitylog",  "activity", "logging", "logs"],
+    "keywords": ["october", "octobercms", "laravel", "activity", "logging", "logs"],
     "license": "MIT",
     "authors": [
         {
