--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,3 +1,4 @@
 1.0.1:
     - 'Initial version of ActivityLog'
     - create_activities_table.php
+1.0.2: 'Retrieve source name from $activity->source_name allowing for modification by extending plugins'
