--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -5,3 +5,4 @@
 2.0.0: 'Renamed plugin to EasyAudit'
 2.0.1: 'Properly initialize for all supported model events - specifically model.afterCreate'
 2.0.2: 'Minor typo'
+2.0.3: 'Fixed issues related to manually triggering events on models'
