--- a/controllers/activities/config_list.yaml
+++ b/controllers/activities/config_list.yaml
@@ -14,6 +14,8 @@ title: Manage Activities
 # Link URL for each record
 recordUrl: luketowers/easyaudit/activities/update/:id
 
+recordOnClick: '$.oc.activityController.clickActivityRecord(:id)'
+
 # Message to display if the list is empty
 noRecordsMessage: backend::lang.list.no_records
 
