--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,3 +6,4 @@
 2.0.1: 'Properly initialize for all supported model events - specifically model.afterCreate'
 2.0.2: 'Minor typo'
 2.0.3: 'Fixed issues related to manually triggering events on models'
+2.1.0: 'Added a filterable system-wide audit log view'
