Added IP address & user agent logging, added an ActivityLog formwidget to make it easier to view related activities

--- a/models/activity/columns.yaml
+++ b/models/activity/columns.yaml
@@ -20,6 +20,11 @@ columns:
         label: luketowers.easyaudit::lang.models.activity.log
         type: text
         searchable: true
+        invisible: true
+    ip_address:
+        label: luketowers.easyaudit::lang.models.activity.ip_address
+        invisible: true
+        searchable: true
     created_at:
         label: luketowers.easyaudit::lang.models.activity.created_at
         type: datetime
