--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,6 @@
 2.0.3: 'Fixed issues related to manually triggering events on models'
 2.1.0: 'Added a filterable system-wide audit log view'
 2.1.1: 'Fixed "Call to member function is null"'
+2.2.0:
+    - 'Added IP address & user agent logging, added the ActivityLog formwidget'
+    - add_ip_activities.php
