--- a/controllers/activities/config_list.yaml
+++ b/controllers/activities/config_list.yaml
@@ -32,9 +32,9 @@ showSetup: true
 showSorting: true
 
 # Default sorting column
-# defaultSort:
-#     column: created_at
-#     direction: desc
+defaultSort:
+    column: created_at
+    direction: desc
 
 # Display checkboxes next to each record
 showCheckboxes: false
