--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -18,3 +18,5 @@
 3.0.4: 'Restrict system audit log page based on user permissions'
 3.0.5: 'Detect when user impersonation is happening to log the original user instead of the impersonated one'
 3.0.6: 'Fixed some bugs with filtering audit logs with large numbers of records'
+3.0.7: 'Performance improvement for the System Activities dashboard widget'
+3.0.8: 'Improved support for embedding the ActivityLog form widget in nested popups'
