--- a/models/activity/columns.global.yaml
+++ b/models/activity/columns.global.yaml
@@ -4,19 +4,23 @@
 
 columns:
     source_name:
-        type: text
+        type: partial
         label: luketowers.easyaudit::lang.models.activity.source
         searchable: false
         sortable: false
+        clickable: true
+        path: $/luketowers/easyaudit/models/activity/column.source_name.php
     event:
         label: luketowers.easyaudit::lang.models.activity.event
         type: text
         searchable: true
     subject_name:
-        type: text
-        label: luketowers.easyaudit::lang.models.activity.subject
+        type: partial
+        label: luketowers.easyaudit::lang.models.activity.source
         searchable: false
         sortable: false
+        clickable: true
+        path: $/luketowers/easyaudit/models/activity/column.subject_name.php
     description:
         label: luketowers.easyaudit::lang.models.activity.description
         type: text
