Add support for tracking backend users
Also:
- Adds the list of a user's activities to their backend record page
- Improves support for displaying activities caused by a record rather than caused to the record in the ActivityLogger FormWidget

--- a/models/activity/columns.global.yaml
+++ b/models/activity/columns.global.yaml
@@ -16,7 +16,7 @@ columns:
         searchable: true
     subject_name:
         type: partial
-        label: luketowers.easyaudit::lang.models.activity.source
+        label: luketowers.easyaudit::lang.models.activity.subject
         searchable: false
         sortable: false
         clickable: true
